--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <!-- <link
+    <link
       rel="icon"
       type="image/svg+xml"
-      href="./src/assets/brainwave-symbol.svg"
-    /> -->
+      href="./src/assets/favicon.png"
+    />
     <link href='https://cdn.boxicons.com/3.0.4/fonts/basic/boxicons.min.css' rel='stylesheet'>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Groodie</title>
